--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    /* background-color: rgb(99, 250, 79); */
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+    background-color: rgb(99, 250, 79);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -66,8 +65,7 @@ nav{
         right: 0px;
         height: 92vh;
         top: 8vh;
-        /* background-color: rgb(99, 250, 79); */
-        background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+        background-color: rgb(99, 250, 79);
         display: flex;
         flex-direction: column;
         align-items: center;
